--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "foundation": "^5.5.3",
     "flat-color-icons": "^1.0.2",
     "foundation-icons": "*",
-    "foundation-icon-fonts": "*"
+    "foundation-icon-fonts": "*",
+    "slick-carousel": "^1.8.1"
   }
 }
