--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "foundation-icons": "*",
     "foundation-icon-fonts": "*",
     "slick-carousel": "^1.8.1",
-    "jscroll": "jquery.jscroll#^2.3.9"
+    "jscroll": "jquery.jscroll#^2.3.9",
+    "sweetalert": "^2.1.0",
+    "sweetalert2": "^7.3.2"
   }
 }
