--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "jscroll": "jquery.jscroll#^2.3.9",
     "sweetalert": "^2.1.0",
     "sweetalert2": "^7.3.2",
-    "AlertifyJS": "https://github.com/MohammadYounes/AlertifyJS.git#^1.11.0"
+    "AlertifyJS": "https://github.com/MohammadYounes/AlertifyJS.git#^1.11.0",
+    "pusher-js": "pusher#^4.2.2"
   }
 }
