--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "devDependencies": {
         "axios": "^0.17",
         "bootstrap-sass": "^3.3.7",
-        "jquery": "^3.2",
+        "jquery": "^3.3.1",
         "laravel-mix": "^1.7.2",
-        "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "lodash": "^4.17.10",
+        "vue": "^2.5.16"
     },
     "name": "my_place_01",
     "description": "<p align=\"center\"><img src=\"https://laravel.com/assets/img/components/logo-laravel.svg\"></p>",
@@ -24,7 +24,10 @@
     "directories": {
         "test": "tests"
     },
-    "dependencies": {},
+    "dependencies": {
+        "laravel-echo": "^1.3.5",
+        "pusher-js": "^4.2.2"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/BunnyPi04/my_place_01.git"
